--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "parcel": "^2.8.3"
   },
   "scripts": {
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+    "build": "parcel src/index.html"
   }
 }
