--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
   },
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel src/index.html"
+    "build": "parcel build src/index.html"
   }
 }
